--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,10 @@
 [workspace]
 members = [
-    "src/01_welcome/01_syntax",
+    "src/01_welcome/*",
+    "src/02_a_basic_calculator/*",
 ]
 
 resolver = "2"
 
 [workspace.dependencies]
+rstest = "0.22.0"
