--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,5 @@ resolver = "2"
 rstest = "0.22.0"
 common = { path = "helpers/common" }
 
-# [profile.dev]
-# overflow-checks = false
+[profile.dev]
+overflow-checks = false
